--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -487,9 +487,7 @@ exp(-3.29)/(exp(-3.29)+exp(-7.1))
 
 The probabilities of choosing auto for a work trip for an individual belonging to segment A is 92.67293%. That of segment B is 97.83317%.
 
- ---
- 
- b. In order to increase transit ridership, the local transport authority is considering the following options:
+ b. In order to increase transit ridership, the local transport authority is considering the following options
   i. Reducing the fare by 50 cents in both segments.
 
 $V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times(0.85-0.50)=-4.1775 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times(2.00-0.50)=-6.775 & \text{Segment B} \end{cases}$
@@ -508,11 +506,8 @@ exp(-6.775)/(exp(-3.29)+exp(-6.775))
 9.863359-(100-92.67293)
 2.974205-(100-97.83317)
 (9.863359-(100-92.67293))/(2.974205-(100-97.83317))
-
 ```
 
- ---
- 
   ii. Doubling the number of buses on each route (which would halve the headways).
 
 $V''_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}4-0.65\times0.85=-4.1275 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}4-0.65\times2.00=-6.6 & \text{Segment B} \end{cases}$
@@ -532,8 +527,6 @@ exp(-6.6)/(exp(-3.29)+exp(-6.6))
 3.522972-(100-97.83317)
 (10.31689-(100-92.67293))/(3.522972-(100-97.83317))
 ```
-
- ---
  
   iii. Increasing parking costs by 50% (i.e. \$3.00 parking cost increases to \$4.50)
 For each population segment, how will each of these strategies affect transit ridership (market share of transit), and which option will be most effective in increasing ridership?
@@ -558,7 +551,7 @@ exp(-3.71)/(exp(-3.71)+exp(-7.1))
 
 Based on the results, all of the options can increase market share of transit in both segment A and B. Comparing the three $\Delta P_{bus}$, doubling the number of buses on each route is most effective in increasing ridership for both segments. It is hard to say which option is best because the cost of each option is unknown. 
 
-In this case, we can find the spatial difference of the effects between segement A and B, which may be called "location elasticity". $\frac{\Delta P_{busA}}{\Delta P_{busB}}=3.141401$ shows reducing fare in city center is much more effective than in suburb. $\frac{\Delta P_{busA}}{\Delta P_{busB}}=2.204651$ also proves doubling the number of buses in city center is better than in subrub. Meanwhile, there is not significant difference of effect between segement A and B for increasing parking costs ($\frac{\Delta P_{busA}}{\Delta P_{busB}}=1.04558$).
+In this case, we can find the spatial difference of the effects between segement A and B, which may be called "location elasticity". $\frac{\Delta P_{busA}}{\Delta P_{busB}}=3.141401$ shows reducing fare in city center is much more effective than that in suburb. $\frac{\Delta P_{busA}}{\Delta P_{busB}}=2.204651$ also proves doubling the number of buses in city center is better than in subrub. Meanwhile, there is not significant difference of effect between segement A and B by increasing parking costs ($\frac{\Delta P_{busA}}{\Delta P_{busB}}=1.04558$).
 
 
  ---
@@ -571,7 +564,7 @@ According to the model, other possible policies include changing the travel time
  
  d. What monetary value of bus travel time, measured in dollars per hour, is implied by the coefficients of this model?
 
-$VOT =\frac{\frac{\Delta V_{bus}}{\Delta TT_{bus}}}{\frac{\Delta V_{bus}}{\Delta Fare_{bus}}}=\frac{-0.08}{-0.65}\times60=7.384615$ \$/hour
+$$VOT =\frac{\frac{\Delta V_{bus}}{\Delta TT_{bus}}}{\frac{\Delta V_{bus}}{\Delta Fare_{bus}}}=\frac{-0.08}{-0.65}\times60=7.384615\$/hour$$
 
 In this model, bus fare instead of $\frac{cost}{wage}$ measures the systematic utilities per dollar. The monetary value of bus travel time is 7.384615 \$/hour.
 
