--- a/static/stat565/hw_stat565.Rmd
+++ b/static/stat565/hw_stat565.Rmd
@@ -864,12 +864,12 @@ table_ingredients$Trt <- as.factor(table_ingredients$Trt)
 glimpse(table_ingredients)
 table_ingredients%>%ggplot(aes(Batch,y))+geom_point(aes(shape=Day,col=Trt),alpha=0)+geom_text(aes(label=Day))+facet_grid(.~Trt)+theme_light()
 table_ingredients%>%ggplot(aes(Batch,y))+geom_point(aes(shape=Day,col=Trt),alpha=0)+geom_text(aes(label=Trt))+facet_grid(.~Day)+theme_light()
-qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
-qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Batch,lty=Batch))+theme_light()
-qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
-qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Day,lty=Day))+theme_light()
 qplot(reorder(Trt,y),y,data=table_ingredients)+geom_line(aes(group=Day,lty=Day))+theme_light()
 qplot(reorder(Trt,y),y,data=table_ingredients)+geom_line(aes(group=Batch,lty=Batch))+theme_light()
+qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
+qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
+qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Batch,lty=Batch))+theme_light()
+qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Day,lty=Day))+theme_light()
 ```
 
  (b) Obtain the ANOVA table for this study and report it here.
@@ -919,19 +919,20 @@ ols_plot_resid_qq(lm(y~Trt+Day+Batch,data =table_ingredients))
 
  (f) Report the complete code along with output here.
 
-```{r,collapse=T, out.width='20%'}
+```{r,collapse=T, out.width='20%',fig.show='hold'}
 # (a)
 table_ingredients <- read_xlsx("Exercise4_22.xlsx");  table_ingredients$Day <- as.factor(table_ingredients$Day)
 table_ingredients$Batch <- as.factor(table_ingredients$Batch);  table_ingredients$Trt <- as.factor(table_ingredients$Trt)
 glimpse(table_ingredients)
 table_ingredients%>%ggplot(aes(Batch,y))+geom_point(aes(shape=Day,col=Trt),alpha=0)+geom_text(aes(label=Day))+facet_grid(.~Trt)+theme_light()
 table_ingredients%>%ggplot(aes(Batch,y))+geom_point(aes(shape=Day,col=Trt),alpha=0)+geom_text(aes(label=Trt))+facet_grid(.~Day)+theme_light()
-qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
-qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Batch,lty=Batch))+theme_light()
-qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
-qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Day,lty=Day))+theme_light()
 qplot(reorder(Trt,y),y,data=table_ingredients)+geom_line(aes(group=Day,lty=Day))+theme_light()
 qplot(reorder(Trt,y),y,data=table_ingredients)+geom_line(aes(group=Batch,lty=Batch))+theme_light()
+qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
+qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Trt,lty=Trt))+theme_light()
+qplot(reorder(Day,y),y,data=table_ingredients)+geom_line(aes(group=Batch,lty=Batch))+theme_light()
+qplot(reorder(Batch,y),y,data=table_ingredients)+geom_line(aes(group=Day,lty=Day))+theme_light()
+
 ```
 
 ```{r,collapse=T}
