--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -723,37 +723,48 @@ As long as $c\ge\max_{y}f_Y(y)$, $F_Y(y)=\int_0^yf_Y(t)dt$. By the definition 1.
 
  (a). Show that $P(W\le w)=\int_a^w\frac{f(t)dt}{c(b-a)}$ for $a\le x\le b$.
 
-$f_X(x)=\frac1{b-a},\int_a^bf_X(x)dx=1$, $f_Y(y)=\frac1{c},\int_0^cf_Y(y)dy=1$. Set $w=b$, then we have $P(Y<f(X))=\int^b_a\int^{c}_0 dydx={c(b-a)}$.
+For $Y\sim Uni(0,c)$ and $c=\max\limits_{a\le x\le b}f(x)$, $f_Y(y)=\frac1{c}$ and $P(Y<f(X))=1$.
 
-$F_W(w)=F(X|Y)$.
+For $X \sim Uni(a,b)$, $X$ and $Y$ being independent, $f_{X,Y}(x,y)=\frac1{c}\frac1{b-a}$.
 
-$$P(W\le w)= P(a\le X\le w|Y<f(X))=\frac{P(a\le X\le w,Y<f(X))}{P(Y<f(X))}=\frac{\int^w_a\int^{f(x)}_0 dydx}{\int^b_a\int^{c}_0 dydx}=\frac{\int^w_af(x)dx}{\int^b_acdx}=\frac1{c(b-a)}\int_a^w f(x)dx$$
+If $Y<f(X)$, $W=X$ means 
+
+$$P(W\le w)=P(a\le X\le w|Y<f(X))=\frac{P(a\le X\le w,Y<f(X))}{P(Y<f(X))}=\frac{F_{X,Y}(x,y)}{1}=\int^w_a\int^{f(x)}_0f_{X,Y}(x,y) dsdt=\frac1{c(b-a)}\int_a^w f(t)dt$$
+
+Otherwise, $W=d>b$, then $P(W\le w)=P(b<d\le w)=0$
 
  (b). Using part (a), explain how a random variable with pdf $f(x)$ can be generated. (Hint: Use a geometric argument; a picture will help.)
+ 
+```{r echo=FALSE, out.width='30%',collapse=T, fig.show='hold'}
+plot(c(0,40), c(0,0.15), type = "n",main="Geom(1/(c(b-a)))",xlab ="n", ylab ="p")
+points(c(0:40),dgeom(c(0:40), 1/4, log = FALSE))
+lines(c(0:40), dgeom(c(0:40), 1/4, log = FALSE), col = 2)
+polygon(c(2,seq(2,7,1),7) ,c(0,dgeom(c(2:7), 1/4, log = FALSE),0) ,density=10, angle=45,lty =3)
+abline(h=dgeom(2, 1/4, log = FALSE),lty=2);text(0,0.14,"c", col = 2, adj = c(-.1,0))
+abline(v=1/(dgeom(2, 1/4, log = FALSE)),lty=2);text(7,0, "w", col = 2, adj = c(-.5,0))
+abline(v=2,lty=2);text(2,0, "a", col = 2, adj = c(1.5,0));abline(v=37,lty=2);text(37,0, "b", col = 2, adj = c(-.5,-1))
+```
 
-To generate a random variable with pdf $f(x)$:
+Let $f(t)\sim Geom(\frac1{c(b-a)}),x\in[a,b]$. The area of box is $c(b-a)$. $P(W\le w)$ is the probability of the shaded area.
+
+$$c(b-a)P(W\le w)=\int^w_a\int^{f(x)}_0 dsdt=\int_a^w f(t)dt$$
+
+Thus, as long as $c\ge\max\limits_{a\le x\le b}f(x)$, $F_W(w)=\frac1{c(b-a)}\int_a^w f(t)dt$. By the definition 1.6.3 (pdf) , this algorithm generates a random variable with pdf $f(x)$ from the uniform random variables.
+
+Summary: To generate a random variable with pdf $f(t)$:
 
 a. Generate  independent $X\sim Uni(a,b)$, $Y\sim Uni(0,c)$.
 
 b. If $Y<f(X)$, set $W=X$ ; otherwise, set $W=d,(d>b)$.
 
-As long as $c\ge\max\limits_{a\le x\le b}f(x)$, $F_W(w)=\frac1{c(b-a)}\int_a^w f(t)dt$. By the definition 1.6.3 (pdf) , this algorithm generates a random variable with pdf $f(x)$ from the uniform random variables.
+Let $N=$ number of $(X,Y)$ pairs required for one $W$, then $N$is a $Geom(\frac1{c(b-a)}$ random ariable. Thus to generate one $W$, we expect to need $E(N)=c(b-a)$ pairs  $(X,Y)$ and in this sense minimizing $c(b-a)$will optimize the algorithm.
 
-```{r echo=FALSE, out.width='30%',collapse=T, fig.show='hold'}
+```{r eval=FALSE, collapse=T, include=FALSE}
 plot(c(0,1), c(0,3), type = "n",main="beta(2,5)",xlab ="x", ylab ="y")
 curve(dbeta(x,2,5, ncp = 0, log = FALSE),0,1,add =T)
 abline(h=dbeta((2-1)/(2+5-2),2,5, ncp = 0, log = FALSE),lty=3);text(0,2.5, "c", col = 2, adj = c(0,0))
 abline(v=(2-1)/(2+5-2),lty=2);text(0.2,0, "1/b", col = 2, adj = c(-.1,0));abline(v=1/2,lty=2);text(0.5,0, "1/a", col = 2, adj = c(-.1,0))
 
-plot(c(0,20), c(0,0.15), type = "n",main="Geom(1/(c(b-a)))",xlab ="n", ylab ="p")
-points(c(0:20),dgeom(c(0:20), 1/7.5, log = FALSE))
-lines(c(0:20), dgeom(c(0:20), 1/7.5, log = FALSE), col = 2)
-abline(v=2.5*(5-2),lty=2);text(7.5,0, "c(b-a)", col = 2, adj = c(-.1,0))
-```
-
-Let $N=$ number of $(X,Y)$ pairs required for one $W$, then $N$is a $Geom(\frac1{c(b-a)}$ random ariable. Thus to generate one $W$, we expect to need $E(N)  (b-a)$ pairs  $(X,Y)$ and in this sense minimizing $c(b-a)$will optimize the algorithm.
-
-```{r eval=FALSE, collapse=T, include=FALSE}
 plot(c(0,1), c(0,3), type = "n",main="beta(2.7,6.3)",xlab ="x", ylab ="y")
 curve(dbeta(x,2.7,6.3, ncp = 0, log = FALSE),0,1,add =T)
 abline(h=dbeta((2.7-1)/(2.7+6.3-2),2.7,6.3, ncp = 0, log = FALSE),lty=3)
