--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -717,6 +717,14 @@ $$P(Y\le y)= P(V\le y|U<\frac1cf_Y(V))=\frac{P(V\le y,U<\frac1cf_Y(V))}{P(U<\fra
 
 As long as $c\ge\max_{y}f_Y(y)$, $F_Y(y)=\int_0^yf_Y(t)dt$. By the definition 1.6.3 (pdf) , this algorithm generates a $beta(a,b)$ random variable.
 
+```{r echo=FALSE, out.width='50%',collapse=T, fig.show='hold'}
+plot(c(0,1), c(0,3), type = "n",main="beta(2,5)",xlab ="v", ylab ="u")
+curve(dbeta(x,2,5, ncp = 0, log = FALSE),0,1,add =T)
+polygon(c(0,seq(0,0.5,0.05),0.5) ,c(0,dbeta(seq(0,0.5,0.05),2,5, ncp = 0, log = FALSE),0) ,density=10, angle=45,lty =3)
+abline(h=dbeta((2-1)/(2+5-2),2,5, ncp = 0, log = FALSE),lty=3);text(0,2.5, "c", col = 2, adj = c(0,0))
+abline(v=1/2,lty=2);text(0.5,0, "y", col = 2, adj = c(-.1,0))
+```
+
  ---
 
 **5.60** Generalize the algorithm of Example 5.6.7 to apply to any bounded pdf; that is, for an arbitrary bounded pdf $f(x)$ on $[a, b]$, define $c=\max\limits_{a\le x\le b}f(x)$. Let $X$ and $Y$ be independent, with $X \sim Uni(a,b)$ and $Y\sim Uni(0,c)$. Let $d$ be a number greater than $b$, and define a new random variable $W=\begin{cases}X&\text{if }Y<f(X)\\d&\text{if }Y\ge f(X)\end{cases}$.
@@ -759,13 +767,9 @@ a. Generate  independent $X\sim Uni(a,b)$, $Y\sim Uni(0,c)$.
 
 b. If $Y<f(X)$, set $W=X$ ; otherwise, set $W=d,(d>b)$.
 
-Let $N=$ number of $(X,Y)$ pairs required for one $W$, then $N$is a $Geom(\frac1{c(b-a)}$ random variable. Thus to generate one $W$, we expect to need $E(N)=c(b-a)$ pairs  $(X,Y)$ and in this sense minimizing $c(b-a)$will optimize the algorithm.
+Let $N=$ number of $(X,Y)$ pairs required for one $W$, then $N$ is a $Geom(\frac1{c(b-a)}$ random variable. Thus to generate one $W$, we expect to need $E(N)=c(b-a)$ pairs of $(X,Y)$ and in this sense minimizing $c(b-a)$ will optimize the algorithm.
 
 ```{r eval=FALSE, collapse=T, include=FALSE}
-plot(c(0,1), c(0,3), type = "n",main="beta(2,5)",xlab ="x", ylab ="y")
-curve(dbeta(x,2,5, ncp = 0, log = FALSE),0,1,add =T)
-abline(h=dbeta((2-1)/(2+5-2),2,5, ncp = 0, log = FALSE),lty=3);text(0,2.5, "c", col = 2, adj = c(0,0))
-abline(v=(2-1)/(2+5-2),lty=2);text(0.2,0, "1/b", col = 2, adj = c(-.1,0));abline(v=1/2,lty=2);text(0.5,0, "1/a", col = 2, adj = c(-.1,0))
 
 plot(c(0,1), c(0,3), type = "n",main="beta(2.7,6.3)",xlab ="x", ylab ="y")
 curve(dbeta(x,2.7,6.3, ncp = 0, log = FALSE),0,1,add =T)
