--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -720,9 +720,9 @@ As long as $c\ge\max_{y}f_Y(y)$, $F_Y(y)=\int_0^yf_Y(t)dt$. By the definition 1.
 ```{r echo=FALSE, out.width='50%',collapse=T, fig.show='hold'}
 plot(c(0,1), c(0,3), type = "n",main="beta(2,5)",xlab ="v", ylab ="u")
 curve(dbeta(x,2,5, ncp = 0, log = FALSE),0,1,add =T)
-polygon(c(0,seq(0,0.5,0.05),0.5) ,c(0,dbeta(seq(0,0.5,0.05),2,5, ncp = 0, log = FALSE),0) ,density=10, angle=45,lty =3)
+polygon(c(0,seq(0,0.406901,0.001),0.406901) ,c(0,dbeta(seq(0,0.406901,0.001),2,5, ncp = 0, log = FALSE),0) ,density=10, angle=45,lty =3)
 abline(h=dbeta((2-1)/(2+5-2),2,5, ncp = 0, log = FALSE),lty=3);text(0,2.5, "c", col = 2, adj = c(0,0))
-abline(v=1/2,lty=2);text(0.5,0, "y", col = 2, adj = c(-.1,0))
+abline(v=1/(dbeta((2-1)/(2+5-2),2,5, ncp = 0, log = FALSE)),lty=2);text(0.4,0, "y", col = 2, adj = c(-1,0))
 ```
 
  ---
@@ -746,20 +746,21 @@ Otherwise, $W=d>b$, then $P(W\le w)=P(b<d\le w)=0$
  (b). Using part (a), explain how a random variable with pdf $f(x)$ can be generated. (Hint: Use a geometric argument; a picture will help.)
  
 ```{r echo=FALSE, out.width='50%',collapse=T, fig.show='hold'}
-plot(c(0,40), c(0,0.15), type = "n",main="Geom(1/(c(b-a)))",xlab ="n", ylab ="p")
+plot(c(0,40), c(0,0.15), type = "n",main="Geom(1/4)",xlab ="n", ylab ="p")
 points(c(0:40),dgeom(c(0:40), 1/4, log = FALSE))
 lines(c(0:40), dgeom(c(0:40), 1/4, log = FALSE), col = 2)
 polygon(c(2,seq(2,7,1),7) ,c(0,dgeom(c(2:7), 1/4, log = FALSE),0) ,density=10, angle=45,lty =3)
 abline(h=dgeom(2, 1/4, log = FALSE),lty=2);text(0,0.14,"c", col = 2, adj = c(-.1,0))
 abline(v=1/(dgeom(2, 1/4, log = FALSE)),lty=2);text(7,0, "w", col = 2, adj = c(-.5,0))
-abline(v=2,lty=2);text(2,0, "a", col = 2, adj = c(1.5,0));abline(v=37,lty=2);text(37,0, "b", col = 2, adj = c(-.5,-1))
+abline(v=2,lty=2);text(2,0, "a", col = 2, adj = c(1.5,0))
+abline(v=37,lty=2);text(37,0, "b", col = 2, adj = c(-.5,-1))
 ```
 
-Let $f(t)\sim Geom(\frac1{c(b-a)}),x\in[a,b]$. The area of box is $c(b-a)$. $P(W\le w)$ is the probability of the shaded area.
+Let $f(t)\sim Geom,x\in[a,b]$. The area of box is $c(b-a)$. $P(W\le w)$ is the probability of the shaded area.
 
 $$c(b-a)P(W\le w)=\int^w_a\int^{f(x)}_0 dsdt=\int_a^w f(t)dt$$
 
-Thus, as long as $c\ge\max\limits_{a\le x\le b}f(x)$, $F_W(w)=\frac1{c(b-a)}\int_a^w f(t)dt$. By the definition 1.6.3 (pdf) , this algorithm generates a random variable with pdf $f(x)$ from the uniform random variables.
+Thus, as long as $c\ge\max\limits_{a\le x\le b}f(x)$, $F_W(w)=\frac1{c(b-a)}\int_a^w f(t)dt$. By the definition 1.6.3 (pdf) , this algorithm generates a random variable with pdf $f(t)$ from the uniform random variables.
 
 Summary: To generate a random variable with pdf $f(t)$:
 
@@ -767,7 +768,7 @@ a. Generate  independent $X\sim Uni(a,b)$, $Y\sim Uni(0,c)$.
 
 b. If $Y<f(X)$, set $W=X$ ; otherwise, set $W=d,(d>b)$.
 
-Let $N=$ number of $(X,Y)$ pairs required for one $W$, then $N$ is a $Geom(\frac1{c(b-a)}$ random variable. Thus to generate one $W$, we expect to need $E(N)=c(b-a)$ pairs of $(X,Y)$ and in this sense minimizing $c(b-a)$ will optimize the algorithm.
+Let $N=$ number of $(X,Y)$ pairs required for one $W$, then $N$ is a $Geom$ random variable. Thus to generate one $W$, we expect to need $E(N)=c(b-a)$ pairs of $(X,Y)$ and in this sense minimizing $c(b-a)$ will optimize the algorithm.
 
 ```{r eval=FALSE, collapse=T, include=FALSE}
 
