--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -1,6 +1,6 @@
 ---
-title: 'STAT565 Homework'
-author: ""
+title: "STAT565 Homework"
+author: ''
 date: "Winter 2019"
 output: html_document
 ---
@@ -1040,4 +1040,6 @@ $=\frac{σ^2}{bn}+\frac{σ^2}{abn}-\frac{2}{ab^2n^2}\sum\limits_{j=1}^b\sum\limi
  - For $E[X^2]=E[X]^2+V[X]$, therefore,
 
 $$E[SS_A]=bn\sum_{i=1}^aE[(\bar y_{i..}-\bar y_{...})^2]=bn\sum_{i=1}^a(E[\bar y_{i..}-\bar y_{...}]^2+V[\bar y_{i..}-\bar y_{...}])=bn\sum_{i=1}^a(\tau_i^2+\frac{a-1}{abn}σ^2)=bn\sum_{i=1}^aτ_i^2+(a-1)σ^2$$ 
+
+
 
