--- a/static/stat565/lab_stat565.tex
+++ b/static/stat565/lab_stat565.tex
@@ -24,7 +24,8 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={STAT565 Lab},
+            pdftitle={STAT565\_Lab},
+            pdfauthor={Shen Qu},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -113,21 +114,19 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{STAT565 Lab}
+  \title{STAT565\_Lab}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-    \author{}
-    \preauthor{}\postauthor{}
+    \author{Shen Qu}
+    \preauthor{\centering\large\emph}
+  \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Winter 2019}
+    \date{2019/3/8}
 
 
 \begin{document}
 \maketitle
-
-\hypertarget{section}{%
-\section{}\label{section}}
 
 \hypertarget{lab5-two-factor-factorial-1}{%
 \subsection{Lab5 Two factor Factorial
@@ -138,7 +137,7 @@ different diets, where there were two levels of protein (high or low)
 and two sources of protein (beef or cereal). This gives 2 x 2 treatment
 combinations: high/beef (HB), high/cereal (HC), low/beef (LB),
 low/cereal (LC). Ten rats were in each of the four treatment groups. Use
-α=0.01
+\(\alpha=0.01\)
 
 \begin{enumerate}
 \def\labelenumi{(\alph{enumi})}
